# soap_bubble_simulation

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run.sh  soap_bubble_simulation_roadmap.md
config/: default.json
docs/: key-insights.md  physics-reference.md  potential-improvements.md
references/: Born_Wolf_1999_Principles_of_Optics_summary.md  Carlip_1988_String_Vertices_summary.md  Durikovic_2001_Soap_Bubble_Animation_summary.md  Glassner_2000_Soap_Bubbles_Part1_summary.md  Glassner_2000_Soap_Bubbles_Part2_summary.md  Green_2007_SDF_Magnification_summary.md  Huang_2020_Chemomechanical_soap_film_summary.md  Isenberg_1992_Soap_Films_Book_summary.md  Jura_2007_Branched_Flow_Electrons_summary.md  Losasso_2004_Geometry_Clipmaps_summary.md  Macleod_2010_Thin_Film_Optical_Filters_summary.md  Meng_2026_Surface_optimization_summary.md  Monier_2025_Soap_Film_Drainage_summary.md  Patsyk_2020_Branched_Flow_Light_summary.md  REFERENCES.md  Saadi_Zwiebach_1989_Closed_String_Field_Theory_summary.md  Schlick_1994_BRDF_Model_summary.md  Soderlund_2022_SDF_Ray_Tracing_summary.md  Tong_String_Theory_Lectures_summary.md  Witten_1986_String_Field_Theory_summary.md  deGennes_2004_Capillarity_Wetting_summary.md  extract_pdf.sh  merge_summaries.sh  split_pdf.sh
scripts/: generate_workflow.R
src/: config.rs  lib.rs  main.rs
src/export/: image_export.rs  mod.rs
src/physics/: drainage.rs  foam.rs  foam_dynamics.rs  foam_generation.rs  geometry.rs  interference.rs  mod.rs
src/render/: branched_flow.rs  camera.rs  caustics.rs  (+6 more)
tests/: integration_harness.rs  screenshot_tests.rs
(+7 files in other folders)
